Added cancancan abilities

--- a/personalProject/Gemfile
+++ b/personalProject/Gemfile
@@ -12,6 +12,7 @@ gem 'jbuilder', '~> 2.0'
 gem 'slim', '~> 3.0.3'
 gem 'simple_form', '~> 3.1.0'
 gem 'devise', '~> 3.4.1'
+gem 'cancancan', '~> 1.10.1'
 gem 'paperclip', '~> 4.2.1'
 gem 'annotate', '~> 2.6.8'
 gem 'better_errors', '~> 2.1.1'
