--- a/personalProject/Gemfile
+++ b/personalProject/Gemfile
@@ -14,7 +14,7 @@ gem 'simple_form', '~> 3.1.0'
 gem 'devise', '~> 3.4.1'
 gem 'cancancan', '~> 1.10.1'
 gem 'acts-as-taggable-on', '~> 3.5.0'
-gem 'geocoder'
+gem 'geocoder', '~> 1.2.8'
 gem 'paperclip', '~> 4.2.1'
 gem 'annotate', '~> 2.6.8'
 gem 'better_errors', '~> 2.1.1'
