--- a/personalProject/test/fixtures/tags.yml
+++ b/personalProject/test/fixtures/tags.yml
@@ -1,3 +1,12 @@
+# == Schema Information
+#
+# Table name: tags
+#
+#  id             :integer          not null, primary key
+#  name           :string(255)
+#  taggings_count :integer          default(0)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
