--- a/personalProject/test/fixtures/users.yml
+++ b/personalProject/test/fixtures/users.yml
@@ -17,6 +17,7 @@
 #  updated_at             :datetime
 #  name                   :string(255)
 #  admin                  :boolean
+#  address                :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
