--- a/personalProject/test/fixtures/posts.yml
+++ b/personalProject/test/fixtures/posts.yml
@@ -14,7 +14,7 @@
 #  image_updated_at   :datetime
 #  latitude           :float
 #  longitude          :float
-#  location           :string(255)
+#  address            :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
