--- a/personalProject/test/fixtures/users.yml
+++ b/personalProject/test/fixtures/users.yml
@@ -18,6 +18,8 @@
 #  name                   :string(255)
 #  admin                  :boolean
 #  address                :string(255)
+#  latitude               :float
+#  longitude              :float
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
