--- a/personalProject/Gemfile
+++ b/personalProject/Gemfile
@@ -1,7 +1,10 @@
 source 'https://rubygems.org'
 
 gem 'rails', '4.1.6'
-gem 'sqlite3'
+group :development do
+	gem 'sqlite3'
+end
+gem 'pg'
 gem 'sass-rails', '~> 4.0.3'
 gem 'bootstrap-sass', '~> 3.2.0'
 gem 'uglifier', '>= 1.3.0'
@@ -21,3 +24,4 @@ gem 'annotate', '~> 2.6.8'
 gem 'better_errors', '~> 2.1.1'
 gem 'sdoc', '~> 0.4.0',          group: :doc
 gem 'spring',        group: :development
+gem 'rails_12factor', group: :production
